fix: sns link collapse

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@
     fill: #121212; } }
 
 .single .container {
-  padding-bottom: 60px; }
+  padding-bottom: 120px; }
 
 section.single {
   width: 100%;
